--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,6 +14,7 @@ builds:
     goarch:
       - amd64
       - arm64
+    main: ./cmd/typ0
     binary: typ0
     ldflags:
       - -s -w -X main.version={{.Version}}
